Created an index.js file for typed-text and changed background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       src="https://kit.fontawesome.com/9570d39f23.js"
       crossorigin="anonymous"
     ></script>
+       <!--------For typing effect----------->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div id="header">
@@ -24,11 +27,8 @@
           </ul>
         </nav>
         <div class="header-text">
-          <p>Student</p>
           <h1>
-            Hi, I'm <span>Sai Seyyadri,</span> a student at the University of
-            Maryland, College Park <br />
-            studying Information Science
+            Hi!, I'm <span id="typed-text" class="typed-text"></span>
           </h1>
         </div>
       </div>
